<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HookahTracker</string>
    <string name="delete_hookah">Delete Hookah</string>
    <string name="delete_shisha">Delete Flavor</string>
    <string name="shisha_grams">Grams:</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="action_statistics">Statistics</string>
    <string name="average_sessions">Average Number of Sessions:</string>
    <string name="average_shisha">Average Shisha Used Per Session:</string>
    <string name="average_coals">Average Coals Used Per Session:</string>
    <string name="favorite_hookah">Favorite Hookah:</string>
    <string name="shisha_flavor">Flavor:</string>
    <string name="choose_num_coals">Number of Coals:</string>
    <string name="favorite_shisha">Favorite Shisha:</string>
    <string name="total_sessions">Total Sessions:</string>
    <string name="hello_world">Hello world!</string>
    <string name="test">testing</string>
    <string name="add_hookah">Add New Hookah</string>
    <string name="add_shisha">Add New Shisha</string>
    <string name="add_flavor">Add New Flavor</string>
    <string name="add_bowl">Add New Bowl</string>
    <string name="add_coal">Add New Coals</string>
    <string name="hookah_name">Name:</string>
    <string name="hookah_height">Height:</string>
    <string name="hookah_hoses">Hoses:</string>
    <string name="take_new_picture">Take Picture</string>
    <string name="add">Add</string>
    <string name="shisha_brand">Brand Name</string>
    <string name="bowl_grams">Grams</string>
    <string name="bowl_name">Bowl Name</string>
    <string name="coal_name">Coal Name</string>
    <string name="coal_number">Number of Coals</string>
    <string name="about_title">About</string>
    <string name="clear_stats">Clear Statistics</string>
    <string name="clear_database">Clear Database</string>
    <string name="clear_videos">Clear Videos</string>
    <string name="choose_hookah">Choose Hookah:</string>
    <string name="choose_shisha">Choose Shisha:</string>
    <string name="choose_bowl">Choose Bowl:</string>
    <string name="choose_coals">Choose Coals:</string>
    <string name="start_session">Start Session</string>
    <string name="exit_settings">OK</string>
    <string name="store_stats">Store Statistics</string>
    <string name="about_message">Hookah Tracker \nNick Coats and Tim Waite \nVersion 1.0</string>
    <string name="help_title">Help</string>
    <string name="help_message">To use this app, add at least one hookah, shisha brand, shisha flavor, coal, and bowl to each category. Once this is done, you can record a session that will deduct the products used. You can clear the database and the statistics in the settings.</string>
    
    <string-array name="entries"> 
          <item>Hookahs</item>
          <item>Shisha</item>
          <item>Bowls</item>
          <item>Coals</item>
          <item>Session</item>
    </string-array>

</resources>
