<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_hookah"
        android:textSize="24sp"
    />
    
    <Spinner
    	android:id="@+id/choose_hookah"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"

    	android:textSize="24sp"
    />
    
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_bowl"
        android:textSize="24sp"
    />
    
    <Spinner
    	android:id="@+id/choose_bowl"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:textSize="24sp"
    />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_shisha"
        android:textSize="24sp"
    />
    
    <Spinner
    	android:id="@+id/choose_shisha"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:textSize="24sp"
    />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_coals"
        android:textSize="24sp"
    />
    
    <Spinner
    	android:id="@+id/choose_coals"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:textSize="24sp"
    />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:text="@string/choose_num_coals"
        android:textSize="24sp"
    />
     
     <EditText
        android:id="@+id/coal_number_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
    />
    
    <Button
    	android:id="@+id/start_session"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"

    	android:text="@string/start_session"
    	android:textSize="24sp"
    	android:onClick="startSession"
    />

</LinearLayout>
