<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    

    
    <TextView
        android:id="@+id/hookah_name_info_text"
        android:layout_width="fill_parent"
        android:layout_height="48sp"
		android:text="@string/hookah_name"
        android:textSize="24sp"

    />
    

    <TextView
        android:id="@+id/hookah_name_info"
        android:layout_width="fill_parent"
        android:layout_height="48sp"

        android:textSize="24sp"

    />
    
    <View
        android:background="#3d3d3d"
        android:layout_width="fill_parent"
        android:layout_height = "1dp"

    />
    
    <TextView
        android:id="@+id/hookah_height_info_text"
        android:layout_width="fill_parent"
        android:layout_height="48sp"
		android:text="@string/hookah_height"
        android:textSize="24sp"

    />
    

    
    <TextView
        android:id="@+id/hookah_height_info"
        android:layout_width="fill_parent"
        android:layout_height="48sp"

        android:textSize="24sp"

    />
    

    <View
        android:background="#3d3d3d"
        android:layout_width="fill_parent"
        android:layout_height = "1dp"

    />
    
    <TextView
        android:id="@+id/hookah_hose_info_text"
        android:layout_width="fill_parent"
        android:layout_height="48sp"
		android:text="@string/hookah_hoses"
        android:textSize="24sp"

    />
    

    
    <TextView
        android:id="@+id/hookah_hose_info"
        android:layout_width="fill_parent"
        android:layout_height="48sp"

        android:textSize="24sp"

    />
    

    
    <Button
    	android:id="@+id/delete_entry"
    	android:layout_width="fill_parent"
    	android:layout_height="48sp"
    	android:text="@string/delete_hookah"
    	android:textSize="24sp"
    	android:onClick="deleteHookah"

    />
    


</LinearLayout>
