<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    
     <TextView
        android:id="@+id/shisha_flavor_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:text="@string/shisha_flavor"
        android:textSize="24sp"
    />
     
     <EditText
        android:id="@+id/shisha_flavor_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:textSize="24sp"
    />
     
     <TextView
        android:id="@+id/shisha_grams_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:text="@string/shisha_grams"
        android:textSize="24sp"
    />
     
     <EditText
        android:id="@+id/shisha_grams_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:textSize="24sp"
    />
     
     <Button
    	android:id="@+id/add_new_shisha_flavor"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"

    	android:text="@string/add"
    	android:textSize="24sp"
    	android:onClick="addFlavor"
    />

</LinearLayout>
