<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <TextView
        android:id="@+id/hookah_name_text"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:text="@string/hookah_name"
        android:textSize="24sp"
    />
     
     <EditText
        android:id="@+id/hookah_name_input"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:textSize="24sp"
    />
     
     <TextView
        android:id="@+id/hookah_height_text"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:text="@string/hookah_height"
        android:textSize="24sp"
    />
     
     <EditText
        android:id="@+id/hookah_height_input"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:textSize="24sp"
    />
     
     <TextView
        android:id="@+id/hookah_hoses_text"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:text="@string/hookah_hoses"
        android:textSize="24sp"
    />
     
     <EditText
        android:id="@+id/hookah_hoses_input"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:textSize="24sp"
    />

</LinearLayout>
