<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <View
        android:background="#3d3d3d"
        android:layout_width="fill_parent"
        android:layout_height = "1dp"

    />
    
    <TextView
        android:id="@+id/average_shisha_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:text="@string/average_shisha"
        android:textSize="24sp"
    />
    
    <View
        android:background="#3d3d3d"
        android:layout_width="fill_parent"
        android:layout_height = "1dp"

    />
    
    <TextView
        android:id="@+id/average_shisha_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:textSize="24sp"
    />
    
    <View
        android:background="#3d3d3d"
        android:layout_width="fill_parent"
        android:layout_height = "1dp"

    />
    
    
    <TextView
        android:id="@+id/average_coals_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:text="@string/average_coals"
        android:textSize="24sp"
    />
    
    <View
        android:background="#3d3d3d"
        android:layout_width="fill_parent"
        android:layout_height = "1dp"

    />
    
    <TextView
        android:id="@+id/average_coals_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:textSize="24sp"
    />
    
    <View
        android:background="#3d3d3d"
        android:layout_width="fill_parent"
        android:layout_height = "1dp"

    />
    
    <TextView
        android:id="@+id/favorite_hookah_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:text="@string/favorite_hookah"
        android:textSize="24sp"
    />
    
    <View
        android:background="#3d3d3d"
        android:layout_width="fill_parent"
        android:layout_height = "1dp"

    />
    
    <TextView
        android:id="@+id/favorite_hookah"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:textSize="24sp"
    />
    
    <View
        android:background="#3d3d3d"
        android:layout_width="fill_parent"
        android:layout_height = "1dp"

    />
    
    
    
    
    <TextView
        android:id="@+id/total_sessions_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:text="@string/total_sessions"
        android:textSize="24sp"
    />
    
    <View
        android:background="#3d3d3d"
        android:layout_width="fill_parent"
        android:layout_height = "1dp"

    />
    
    <TextView
        android:id="@+id/total_sessions_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:textSize="24sp"
    />
    
    

</LinearLayout>
